# trinity-forked

./: .clang-format  .clang-tidy  .gitignore  ALResult.cpp  ALResult.h  BcDecompress.cpp  BcDecompress.h  BuildFX.py  BuildTr2FXPacked.py  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  EffectCompilerGL2.cpp  EffectCompilerGL4.cpp  EffectCompilerGL4.h  FXInfo.py  HLSLScanner.cpp  ITr2CurveSetOwner.h  ITr2PickableScene.cpp  ITr2PickableScene.h  ITr2Renderable.h  ITr2SoundEmitterOwner.h  ITr2VolumetricRenderable.h  LICENSE.md  ParserState.cpp  README.md  ShaderCompiler.cpp  ShaderCompiler.vcxproj  ShaderCompiler.vcxproj.filters  StdAfx.h  Tr2Blitter.cpp  Tr2Blitter.h  Tr2BufferImplALDx11.h  Tr2ConstantBufferALDx11.cpp  Tr2ConstantBufferALDx11.h  Tr2ConstantBufferALDx9.cpp  Tr2ConstantBufferALGLES2.cpp  Tr2ConstantBufferALOrbis.cpp  Tr2ConstantBufferALStub.cpp  Tr2ConstantBufferFormats.cpp  (+187 more)
shadercompiler/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  CMakeSettings.json  CompileMessageQueue.cpp  CompileMessageQueue.h  DxReflection.cpp  DxReflection.h  EffectCompilerDX11.cpp  EffectCompilerDX11.h  EffectCompilerDX12.cpp  EffectCompilerMetal.cpp  EffectCompilerMetal.h  EffectData.cpp  EffectData.h  FXAnalyzer.cpp  FXAnalyzer.h  HLSLParser.y  HLSLScanner.re  InlineString.h  IntrinsicTypes.h  MSLInclude.h  OutputHLSL.cpp  OutputHLSL.h  ParserState.cpp  ParserState.h  ParserUtils.cpp  ParserUtils.h  Platforms.h  Preprocessor.y  ShaderCompiler.cpp  SymbolTable.cpp  SymbolTable.h  TextureFunctionConversionDX11.cpp  TextureFunctionConversionDX11.h  Type.cpp  Type.h  WorkQueue.h  stdafx.h
shadercompiler/pythonBuildScript/: build.py
shadercompiler/tests/: Bindless.cpp  MetalConversionTest.cpp  RayTracingTest.cpp  ShaderCompilerTest.cpp
tests/: Buffer.cpp  CMakeLists.txt  GPUTimer.cpp  RenderContext.cpp  StdAfx.h  Texture.cpp  TrinityALTest.cpp  TrinityALTest.vcxproj  TrinityALTest.vcxproj.filters  VideoAdapterInfo.cpp  WithValidRenderContextFixture.cpp
tests/Shaders.DX11/: ConstantColor.psh  InstancedRendering.vs.h  InstancedRendering.vsh  LoadMsaaTexture.psh  PositionOnly.vs.h  PositionOnlyWithPerObjectData.vs.h  PositionOnlyWithPerObjectData.vsh  SampleTextureFromTexCoord.psh  SampleTextureMipFromTexCoord.psh  SampleVolumeTexture.psh  TexCoordAndPosition.vs.h  compile.cmd
tests/Shaders.DX12/: PositionOnly.vsh  PositionOnlyWithPerObjectData.vsh  SampleTextureFromTexCoord.psh  SampleTextureMipFromTexCoord.psh  SampleVolumeTexture.psh  TexCoordAndPosition.vsh  WriteToUav.psh  compile.cmd
tests/Shaders.metal/: ConstantColor.psh  InstancedRendering.vsh  LoadMsaaTexture.psh  OutputTexCoord.psh  PositionOnly.vsh  PositionOnlyWithPerObjectData.vsh  SampleTextureFromTexCoord.psh  SampleTextureMipFromTexCoord.psh  SampleVolumeTexture.psh  TexCoordAndPosition.vsh  WriteToUav.psh  compile.sh
tests/Shaders.vulkan/: LoadMsaaTexture.psh  OutputTexCoord.psh  SampleTextureMipFromTexCoord.psh  SampleVolumeTexture.psh  compile.cmd
tests/TrinityALTest.xcodeproj/: project.pbxproj
trinity/tests/: CMakeLists.txt  ContinueOnMainThreadTest.cpp  TestExceptionMacros.h
trinityal/: ALResult.cpp  CMakeLists.txt  Tr2AdapterStructures.h  Tr2DeviceResourceAL.cpp  Tr2DriverUtilities.cpp  Tr2HalHelperStructures.h  Tr2RenderContextEnum.cpp  Tr2RenderContextEnum.h
trinityal/dx11/: Tr2BufferALDx11.cpp  Tr2BufferALDx11.h  Tr2CapsALDx11.cpp  Tr2CapsALDx11.h  Tr2ConstantBufferALDx11.cpp  Tr2PipelineStatsQueryALDx11.cpp  Tr2PrimaryRenderContextDx11.cpp  Tr2PrimaryRenderContextDx11.h  Tr2RenderContextDx11.cpp  Tr2RenderContextDx11.h  Tr2ResourceSetALDx11.cpp  Tr2SamplerStateALDx11.cpp  Tr2SamplerStateALDx11.h  Tr2ShaderALDx11.cpp  Tr2StreamlineALDx11.cpp  Tr2StreamlineALDx11.h  Tr2SwapChainALDx11.cpp  Tr2TextureALDx11.cpp  Tr2TextureALDx11.h  Tr2VideoAdapterInfoALDx11.cpp  Tr2VideoAdapterInfoALDx11.h
trinityal/dx12/: Tr2BufferALDx12.cpp  Tr2BufferALDx12.h  Tr2CapsALDx12.h  Tr2ConstantBufferALDx12.cpp  Tr2ConstantBufferALDx12.h  Tr2FenceALDx12.cpp  Tr2GpuTimerALDx12.cpp  Tr2OcclusionQueryALDx12.cpp  Tr2PipelineStatsQueryALDx12.cpp  Tr2PrimaryRenderContextDx12.cpp  Tr2PrimaryRenderContextDx12.h  Tr2RenderContextDx12.cpp  Tr2RenderContextDx12.h  Tr2ResourceHelper.cpp  Tr2ResourceHelper.h  Tr2ResourceSetALDx12.cpp  Tr2ResourceSetALDx12.h  Tr2RtBottomLevelAccelerationStructureALDx12.cpp  Tr2RtBottomLevelAccelerationStructureALDx12.h  Tr2RtPipelineStateALDx12.cpp  Tr2RtPipelineStateALDx12.h  Tr2RtShaderTableALDx12.cpp  Tr2RtShaderTableALDx12.h  Tr2RtTopLevelAccelerationStructureALDx12.cpp  Tr2RtTopLevelAccelerationStructureALDx12.h  Tr2SamplerStateALDx12.cpp  Tr2SamplerStateALDx12.h  Tr2ShaderALDx12.cpp  Tr2ShaderProgramALDx12.cpp  Tr2ShaderProgramALDx12.h  Tr2StreamlineALDx12.cpp  Tr2StreamlineALDx12.h  Tr2SwapChainALDx12.cpp  Tr2SwapChainALDx12.h  Tr2TextureALDx12.cpp  Tr2TextureALDx12.h  Tr2VideoAdapterInfoALDx12.cpp  Tr2VideoAdapterInfoALDx12.h  Utilities.cpp  Utilities.h
trinityal/include/: Tr2BufferAL.h  Tr2ConstantBufferAL.h  Tr2RenderContextAL.h  Tr2ResourceSetAL.h  Tr2RtBottomLevelAccelerationStructureAL.h  Tr2RtPipelineStateAL.h  Tr2RtShaderTableAL.h  Tr2RtTopLevelAccelerationStructureAL.h  Tr2SamplerStateAL.h  Tr2ShaderAL.h  Tr2ShaderProgramAL.h  Tr2Streamline.h  Tr2StreamlineAL.h  Tr2TextureAL.h  TrinityAL.h  TrinityALForward.h
trinityal/metal/: MetalContext.h  MetalContext.mm  MetalResourceArray.h  MetalResourceArray.mm  MetalUtils.h  MetalUtils.mm  MetalWorkQueue.h  MetalWorkQueue.mm  Tr2BufferALMetal.h  Tr2BufferALMetal.mm  Tr2CapsALMetal.h  Tr2CapsALMetal.mm  Tr2ConstantBufferALMetal.h  Tr2ConstantBufferALMetal.mm  Tr2PrimaryRenderContextMetal.h  Tr2RenderContextMetal.h  Tr2RenderContextMetal.mm  Tr2ResourceSetALMetal.h  Tr2ResourceSetALMetal.mm  Tr2RtBottomLevelAccelerationStructureALMetal.h  Tr2RtBottomLevelAccelerationStructureALMetal.mm  Tr2RtPipelineStateALMetal.h  Tr2RtPipelineStateALMetal.mm  Tr2RtShaderTableALMetal.h  Tr2RtShaderTableALMetal.mm  Tr2RtTopLevelAccelerationStructureALMetal.h  Tr2RtTopLevelAccelerationStructureALMetal.mm  Tr2SamplerStateALMetal.h  Tr2SamplerStateALMetal.mm  (+9 more)
(+1265 files in other folders)
